gfx/ycbcr/ycbcr_to_rgb565.cpp
@@ -42,6 +42,7 @@
 #include <limits.h>
 #include "nsDebug.h"
 #include "ycbcr_to_rgb565.h"
+#include "nsAlgorithm.h"
 
 
 
@@ -151,9 +152,9 @@ static PRUint16 yu2rgb565(int y, int u, int v, int dither) {
   int r;
   int g;
   int b;
-  r = NS_CLAMP((74*y+102*v+DITHER_BIAS[dither][0])>>9, 0, 31);
-  g = NS_CLAMP((74*y-25*u-52*v+DITHER_BIAS[dither][1])>>8, 0, 63);
-  b = NS_CLAMP((74*y+129*u+DITHER_BIAS[dither][2])>>9, 0, 31);
+  r = clamped((74*y+102*v+DITHER_BIAS[dither][0])>>9, 0, 31);
+  g = clamped((74*y-25*u-52*v+DITHER_BIAS[dither][1])>>8, 0, 63);
+  b = clamped((74*y+129*u+DITHER_BIAS[dither][2])>>9, 0, 31);
   return (PRUint16)(r<<11 | g<<5 | b);
 }
 
@@ -458,10 +459,10 @@ NS_GFX_(void) ScaleYCbCrToRGB565(const PRUint8 *y_buf,
       int source_y;
       ctx.rgb_row = (PRUint16 *)(rgb_buf + y*rgb_pitch);
       source_y = source_y0_q16>>16;
-      source_y = NS_CLAMP(source_y, ymin, ymax);
+      source_y = clamped(source_y, ymin, ymax);
       ctx.y_row = y_buf + source_y*y_pitch;
       source_y = (source_y0_q16+source_uv_yoffs_q16)>>(16+y_shift);
-      source_y = NS_CLAMP(source_y, uvmin, uvmax);
+      source_y = clamped(source_y, uvmin, uvmax);
       source_y0_q16 += source_dy_q16;
       ctx.u_row = u_buf + source_y*uv_pitch;
       ctx.v_row = v_buf + source_y*uv_pitch;
